--- a/sos-ci/ansible/vars.yml
+++ b/sos-ci/ansible/vars.yml
@@ -6,3 +6,5 @@ image_id: 62238bf1-62a0-4151-8c09-1adea61e5a9c
 flavor_id: 101
 key_name: cloudkey
 multinic: false
+logs_dir: ~/www/my-ci
+logs_user: logserveruser
