--- a/sos-ci/ansible/vars.yml
+++ b/sos-ci/ansible/vars.yml
@@ -6,3 +6,5 @@ image_id: 5203b96c-94a9-4dce-a7a6-e960ea87e8df
 flavor_id: 101
 key_name: cloudkey
 multinic: false
+logs_dir: ~/www/my-ci
+logs_user: logserveruser
