Adding some packages that devstack is missing if they're not pre-installed.

--- a/sos-ci/ansible/tasks/install_devstack.yml
+++ b/sos-ci/ansible/tasks/install_devstack.yml
@@ -7,6 +7,10 @@
     with_items:
       - git
       - vim
+      # Some libs are missing in the ubuntu cloud image and seemingly not covered by dependencies
+      - python-mysqldb
+      - libmysqlclient-dev
+      - python-dev
 
   - name: clone devstack
     sudo: no
