Adding packages tiresomly handbuild by devstack

--- a/sos-ci/ansible/tasks/install_devstack.yml
+++ b/sos-ci/ansible/tasks/install_devstack.yml
@@ -11,6 +11,11 @@
       - python-mysqldb
       - libmysqlclient-dev
       - python-dev
+      - python-pip
+      - python-wheel
+      - python-numpy
+      - python-yaml
+      - python-posix-ipc
 
   - name: clone devstack
     sudo: no
