--- a/sos-ci/ansible/tasks/install_devstack.yml
+++ b/sos-ci/ansible/tasks/install_devstack.yml
@@ -12,6 +12,14 @@
       - libmysqlclient-dev
       - python-dev
 
+  - name: Unload kvm_intel module
+    shell: modprobe -r kvm_intel
+    sudo: yes
+
+  - name: Load kvm_intel module with nested virt option
+    shell: modprobe kvm_intel nested=1
+    sudo: yes
+
   - name: clone devstack
     sudo: no
     git: repo=https://github.com/openstack-dev/devstack dest=~/devstack
