--- a/sos-ci/ansible/publish.yml
+++ b/sos-ci/ansible/publish.yml
@@ -1,12 +1,14 @@
 - hosts: logs_server
-  remote_user: {{ logs_user }}
+  remote_user: "{{ logs_user }}"
   connection: smart
   gather_facts: false
   tasks:
+  - include_vars: vars.yml
+
   - name: Nuke it if it exists
     shell: rm -rf {{ ref_name }}*
     args:
-      chdir: {{ logs_dir }}
+      chdir: "{{ logs_dir }}"
 
   - name: Create ref directory on web server
     shell: mkdir {{ logs_dir }}/{{ ref_name }}
