--- a/sos-ci.conf.sample
+++ b/sos-ci.conf.sample
@@ -5,7 +5,7 @@ gerrit_port = 29418
 project_name = openstack/cinder
 ci_name = sos-changeme-dsvm-full
 ci_account = my-ci-account
-recheck_string = 'recheck my-ci-name'
+recheck_string = recheck
 
 [Ansible]
 ansible_dir = /path/to/my/ansible/playbooks
