Adds a new config param 'ci_wiki_page' that is added to success and failure messages in order to comply with infra ci requirements

--- a/sos-ci.conf.sample
+++ b/sos-ci.conf.sample
@@ -6,6 +6,7 @@ project_name = openstack/cinder
 ci_name = sos-changeme-dsvm-full
 ci_account = my-ci-account
 recheck_string = recheck
+ci_wiki_page = https://wiki.openstack.org/wiki/ThirdPartySystems/<YOUR_CI_PAGE_HERE>
 
 [Ansible]
 ansible_dir = /path/to/my/ansible/playbooks
