Prevent recheck storms and use run instead of recheck command.

--- a/sos-ci.conf.sample
+++ b/sos-ci.conf.sample
@@ -5,7 +5,7 @@ gerrit_port = 29418
 project_name = openstack/cinder
 ci_name = sos-changeme-dsvm-full
 ci_account = my-ci-account
-recheck_string = recheck
+recheck_string = run sos-changeme-dsvm-full
 ci_wiki_page = https://wiki.openstack.org/wiki/ThirdPartySystems/<YOUR_CI_PAGE_HERE>
 
 [Ansible]
