--- a/sos-ci/ansible/tasks/boot_openstack_instance.yml
+++ b/sos-ci/ansible/tasks/boot_openstack_instance.yml
@@ -1,26 +1,31 @@
 # Creates a new VM and attaches to a network and passes metadata to the instance
-- nova_compute:
-      state: present
-      login_username: "{{ os_login }}"
-      login_password: "{{ os_password }}"
-      login_tenant_name: "{{ os_tenant_name }}"
+
+- name: boot instance
+  os_server:
+    auto_ip: yes
+    auth:
+      username: "{{ os_login }}"
+      password: "{{ os_password }}"
+      project_name: "{{ os_tenant_name }}"
       auth_url: "{{ auth_url }}"
-      name: "{{ instance_name }}"
-      image_id: "{{ image_id }}"
-      flavor_id: "{{ flavor_id }}"
-      key_name: "{{ key_name }}"
+    flavor: "{{ flavor_id }}"
+    image: "{{ image_id }}"
+    key_name: "{{ key_name }}"
+    name: "{{ instance_name }}"
+    network: "{{ private_network }}"
   register: devstack_instance
 
 - name: output info
   debug: var=devstack_instance
 
 - name: Add single nic instance to devstack_instances
-  add_host: hostname={{ devstack_instance['private_ip'] }} groupname=devstack_instances
+  add_host: hostname={{ devstack_instance['openstack']['interface_ip'] }} groupname=devstack_instances
+
 
 - name: wait for ssh to be ready single nic
   wait_for:
     port: 22
-    host: "{{ devstack_instance['private_ip'] }}"
+    host: "{{ devstack_instance['openstack']['interface_ip'] }}"
     timeout: 120
     state: started
 
