Adding constants for timeout handling and added permission setting for cleanup script.

--- a/sos-ci/ansible/tasks/run_cleanup.yml
+++ b/sos-ci/ansible/tasks/run_cleanup.yml
@@ -3,7 +3,7 @@
 
   - name: send over upload script
     sudo: no
-    template: src=../../scripts/upload_logs.sh dest=/home/ubuntu/
+    template: src=../../scripts/upload_logs.sh dest=/home/ubuntu/ mode=755
 
   - name: run upload
     sudo: yes
